K8s/auto/3-networking/0-routes/chat-service/0-chat-service-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: chat-service-route
  labels:
    app: togather
    service: chat-srv
    jwt: enabled
    ratelimitGlobal: enabled # enables ratelimiter
spec:
  parentRefs:
    - name: togather-gateway
      namespace: envoy-gateway

  rules:
    # Chat service routes (for media upload - direct calls)
    - name: chat-private
      matches:
        - path:
            type: RegularExpression
            value: ^/api/v[0-9a-zA-Z]+/chat/.*

      backendRefs:
        - name: chat-srv
          port: 3002
